fix build; layout issues

--- a/src/components/CellView.scss
+++ b/src/components/CellView.scss
@@ -7,18 +7,19 @@
   height: calc(100% - 40px);
   width: 100%;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.025);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   user-select: none;
   -moz-user-select: none;
 
   span {
     display: table-cell;
+    padding-top: 10px;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: top;
     line-height: normal;
-    font-size: 24px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: 600;
     color: rgb(80, 80, 80);
   }
 }
